# learn-physics-haskell

./: .gitignore  CHANGELOG.md  LICENSE  README.md  learn-physics-haskell.cabal
app/: lpfp-ch02.hs  lpfp-ch03.hs  lpfp-ch04.hs  lpfp-ch05.hs  lpfp-ch06.hs
src/LPFP/: .Ch05.hs.swp  Ch02.hs  Ch03.hs  Ch04.hs  Ch05.hs  Ch06.hs
