cabal-version:   3.0
name:            learn-physics-haskell
version:         0.0.0.0
build-type:      Simple

common warnings
    ghc-options: -Wall

executable lpfp-ch02
    main-is: lpfp-ch02.hs
    build-depends:
        base
      , learn-physics-haskell
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -Wall

executable lpfp-ch03
    main-is: lpfp-ch03.hs
    build-depends:
        base
      , learn-physics-haskell
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -Wall

library
  hs-source-dirs: src
  exposed-modules:
      LPFP.Ch02
    , LPFP.Ch03
  build-depends:
      base ^>=4.19.1.0
    , containers ^>=0.6.8
    , diagrams-cairo ^>=1.4.2.1
    , diagrams-lib ^>=1.4.6.2
    , gloss ^>=1.13.2.2
    , gnuplot ^>=0.5.7
    , linear ^>=1.23
    , Vis ^>=1.0.0
  default-language: Haskell2010
  ghc-options: -Wall
